--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/micro
-spring.datasource.username=root
+spring.datasource.username=roo
 spring.datasource.password=tiger
