--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/micro
 spring.datasource.username=root
 spring.datasource.password=tiger
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+
+#Eureka Server URL
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
